--- a/src/main/resources/Environment.properties
+++ b/src/main/resources/Environment.properties
@@ -1,7 +1,7 @@
 browserName=Chrome
 dev.url=http://www.testingshastra.com
 dev.username=devuser
-dev.password=dev@123
+dev.password=dev@1sdf
 dev.db.connection=xyz
 dev.db.user=devdb
 dev.db.password=dbuser@123
